# templar

./: .gitignore  Package.json  README.md  package.yaml  pyproject.toml
templar/: __init__.py  _path_template.py  _query.py  _resolvers.py  _template.py  path_template.py  query.py  resolvers.py  templartypes.py  template.py
tests/: test_base_path.py  test_cache_basic.py  test_cache_lazy.py  test_cache_tiered.py  test_composite.py  test_formatters.py  test_normalizers.py  test_query.py  test_structure_generation.py  test_template.py  test_validate.py  test_variables.py
